--- a/plugin.xml
+++ b/plugin.xml
@@ -42,14 +42,14 @@
 		<preference name="ANDROID_GRADLE_TOOLS_VERSION" default="4.1.0" />
 
 		<config-file target="AndroidManifest.xml" parent="/manifest/application">
-			<activity exported="false" android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop">
+			<activity android:exported="false" android:name="com.gae.scaffolder.plugin.FCMPluginActivity" android:launchMode="singleTop">
 				<intent-filter>
 					<action android:name="FCM_PLUGIN_ACTIVITY" />
 					<category android:name="android.intent.category.DEFAULT" />
 				</intent-filter>
 			</activity>
 			<service 
-				exported="false" 
+				android:exported="false" 
 				android:name="com.gae.scaffolder.plugin.MyFirebaseMessagingService"
 				android:stopWithTask="false">
 				<intent-filter>
